# pygeoinf3D

./: AGENTS.md  README.md  pyproject.toml
docs/agent-docs/: index.md
docs/agent-docs/active-plans/: pygeoinf3d-foundation-plan-phase-1-complete.md  pygeoinf3d-foundation-plan-phase-2-complete.md  pygeoinf3d-foundation-plan.md
docs/agent-docs/references/living/: pygeoinf3d-reference.md
pygeoinf3d/: __init__.py
pygeoinf3d/core/: __init__.py  boundary.py  config.py  domain_base.py  functions.py  region.py
pygeoinf3d/spaces/: __init__.py  forms.py  lebesgue.py
tests/core/: test_boundary.py  test_config.py  test_domain_base.py  test_functions.py  test_region.py
tests/spaces/: __init__.py  test_lebesgue.py
