[tool.poetry]
name = "pygeoinf3d"
version = "0.1.0"
description = "Concrete 3D function spaces and operators built on top of pygeoinf"
authors = ["David Al-Attar and Dan Heathcote"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=1.26.0"
scipy = ">=1.16.1"
matplotlib = ">=3.0.0"
pygeoinf = { path = "../pygeoinf", develop = true }

# Optional geometry extras
trimesh = { version = ">=4.0.0", optional = true }
meshzoo = { version = ">=0.11.0", optional = true }

# Optional spherical extras
pyshtools = { version = ">=4.0.0", optional = true }
Cartopy = { version = "^0.23.0", optional = true }

[tool.poetry.extras]
geometry = ["trimesh", "meshzoo"]
spherical = ["pyshtools", "Cartopy"]

# Heavy FEM/mesh ecosystems (FEniCS, ngsolve, dolfinx) are explicitly deferred
# to v2+. Do not add them here without a full architectural review.

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.2.1"
jupyter = "^1.1.1"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E731", "E741"]
